# Sir-Fix-A-Bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: intake.Dockerfile  worker.Dockerfile
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
examples/: wiz-webhook.json
scripts/: setup-secrets.sh
src/sir_fix_a_bot/: cli.py  config.py  models.py  report.py  worker.py
src/sir_fix_a_bot/agent/: dockerfile.py  gate.py  runner.py
src/sir_fix_a_bot/agent/prompts/: fix_vulnerability.md  repair.md
src/sir_fix_a_bot/intake/: app.py  dedupe.py
src/sir_fix_a_bot/notion/: cmdb.py
src/sir_fix_a_bot/vcs/: github_app.py
src/sir_fix_a_bot/verify/: cloudbuild.py
src/sir_fix_a_bot/wiz/: client.py  queries.py
tests/: conftest.py  test_agent_runner.py  test_config_secrets.py  test_dockerfile_parser.py  test_gate.py  test_github_app.py  test_intake.py  test_notion_cmdb.py  test_own_dockerfiles.py  test_verify.py  test_wiz_client.py  test_worker.py
