[project]
name = "sir-fix-a-bot"
version = "0.1.0"
description = "Autonomous remediation agent: Wiz findings -> Notion CMDB -> GitHub pull request"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "mcp>=1.2.0",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyjwt[crypto]>=2.10",
    "google-cloud-firestore>=2.20",
    "google-cloud-tasks>=2.19",
    "google-cloud-secret-manager>=2.22",
    "google-cloud-build>=3.31",
    "google-cloud-storage>=2.19",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
sir-fix-a-bot = "sir_fix_a_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sir_fix_a_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E501"]

[tool.mypy]
python_version = "3.14"
strict = true
